syntax = "proto3";
package nice_ts;
option java_package = "com.lj.proto";

message C2R_Login // IRequest
{
    string	Account	 = 1;	// 帐号
    string	Password = 2;	// 密码
}

message R2C_Login // IResponse
{
    int32 Error = 91;
    string Message = 92;
    string Address = 1;
    int64 Key	    = 2;
    int64 GateId = 3;
}


message C2G_LoginGate // IRequest
{
    int64 Key = 1;	// 帐号
    int64 GateId = 2;
}

message G2C_LoginGate // IResponse
{
    int32 Error = 91;
    string Message = 92;
    int64 PlayerId = 1;
}