syntax = "proto3";
package com.lj.proto;


enum Opcode{
    MSG_None = 0;
    MSG_C2R_Login = 1000;
    MSG_R2C_Login = 1001;
    MSG_C2G_LoginGate = 1002;
    MSG_G2C_LoginGate = 1003;
}